# opticat_character_recognition

./: README.md  manage.py  pyproject.toml
config/: easyocr_setting.yml  ocr_settings.yml  paddleocr_setting.yml
data/: python_doctr-0.4.1a0-py3-none-any.whl
output/: NSmsS3m2fVau5TtQ.json
processes/ocr/: debugger.py  ocr.py  process.py
processes/pipeline/: process.py
